Make sure no content overlaps the round borders of the card

--- a/deb/openmediavault/workbench/src/app/core/components/intuition/datatable-page/datatable-page.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/datatable-page/datatable-page.component.scss
@@ -15,15 +15,6 @@
 
   .mat-card-content {
     margin-bottom: unset;
-
-    :host ::ng-deep &:not(.has-card-header) {
-      background-color: transparent;
-
-      .mat-toolbar {
-        border-top-left-radius: dv.$omv-radius;
-        border-top-right-radius: dv.$omv-radius;
-      }
-    }
   }
 
   .mat-card-actions {
