--- a/deb/openmediavault/workbench/src/app/core/components/intuition/text-page/text-page.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/text-page/text-page.component.scss
@@ -6,8 +6,6 @@
   padding: unset;
 
   .mat-toolbar {
-    border-top-left-radius: dv.$omv-radius;
-    border-top-right-radius: dv.$omv-radius;
     color: theme.$omv-color-primary;
   }
 
